--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -1,3 +1,11 @@
+body {
+  margin: 0;
+  font-family: "Lobster";
+}
+
 #app {
-  font-family: Avenir, Helvetica, Arial, sans-serif;
+  /* font-family: Avenir, Helvetica, Arial, sans-serif; */
+  font-family: "Lobster";
+  src: url("https://fonts.googleapis.com/css2?family=Lobster&display=swap");
+  background: rgba(236, 223, 216, 255);
 }
